# tntrails

./: .envrc.example  .gitignore  LICENSE  README.md  get_bbox.py  pyproject.toml  svg.py  tntrails.py
data/: TSP-0252.geojson  index.html
