[project]
name = "tntrails"
version = "0.1.0"
description = ""
authors = [
    {name = "Steve Winton",email = "stevewinton@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "tntrails", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
