[project]
name = "tntrails"
version = "0.1.0"
description = ""
authors = [
    {name = "Steve Winton",email = "stevewinton@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "mercantile (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "tntrails", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
